EXTRA_DIST = \
  example1/script.hex \
  example1/script.pl \
  example1/script.py \
  example1/script.sh \
  example2/int.hex \
  example2/int.py \
  example2/int.sh \
  example3/ls.hex \
  example3/conv1.py \
  example4/conv2.hex \
  example4/conv2.sh \
  example7/input.hex \
  example7/rename.py \
  example9/scriptnotfound.hex \
  example10/scripterror.hex \
  example10/scripterror.sh \
  example11/missingconverter.hex \
  example12/convertererror.hex \
  example12/converter.sh \
  example13/somescript.hex \
  lsdir/file1 \
  lsdir/file2 \
  lsdir/file3 \
  tests/example1.out \
  tests/example2.out \
  tests/example3.out \
  tests/example4.out \
  tests/example7.out \
  tests/example9.stderr \
  tests/example10.stderr \
  tests/example11.stderr \
  tests/example12.stderr \
  tests/example13.out

