# run the test script
TESTS = run-dlvhex-tests.sh

# also distribute it
EXTRA_DIST = run-dlvhex-tests.sh

# some variables for the test-script
TESTS_ENVIRONMENT = EXAMPLES=$(top_srcdir)/examples/ TESTDIR=$(top_srcdir)/examples/tests DLVHEX=dlvhex PARAMETERS="-s --plugindir=$(CURDIR)/$(top_builddir)/src"
